Fix Getting Started button spacing

--- a/app/renderer/containers/WelcomePage.css
+++ b/app/renderer/containers/WelcomePage.css
@@ -29,3 +29,7 @@
 .column a {
   display: inline-block;
 }
+
+.column button {
+  margin-top: 2rem;
+}
